--- a/packages/nodeppt-parser/package.json
+++ b/packages/nodeppt-parser/package.json
@@ -31,6 +31,7 @@
     },
     "license": "MIT",
     "dependencies": {
+        "@ksky521/markdown-it-katex": "^2.1.3",
         "ejs": "^3.0.1",
         "fs-extra": "^8.1.0",
         "js-yaml": "^3.12.1",
